2000-08-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/mailq.c:
	    Use  getaddrinfo()  to pick the peer address.

	* include/listutils.h:
	    Incorrect ANSI-C pre-processor string concatenation directive use.

	* libc/myhostname.c:
	    Pick any of my possible addresses, don't specify port.

	* smtpserver/smtpdata.c:
	    Pipelined BDAT after failed MAIL FROM segfaulted
	    on one unprotected SS->mfp referral.  Oops.

2000-08-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libc/getaddrinfo.c:
	    Complete IPv4/IPv6 functionality with proper
	    timeout error handling, and malloc()ed memory
	    garbage collection.  This supplies the function
	    for   --with-ipv6-replacement-libc   cfg option.
	    (Necessary at all systems with GNU LIBC versions
	     up to 2.2.)

2000-08-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdbprocessor.in:
	    Process the owner/group/mode triplet too.

2000-08-18  Ambrose Li <acli@ada.dhs.org>

	* configure.in, acconfig.h, scheduler/transport.c,
	  transports/smtp/getmxrr.c:
	    Linux 2.2.* with libc5 fixes.

2000-08-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/policytest.c, router/libdb/bsdhash.c,
	  router/libdb/bsdbtree.c, utils/makedb/makedb.c,
	  utils/vacation/vacation.c:
	    RedHat 6.0 BSD DB surprised somewhat... Fixes for
	    the configuration senses.

	* configure.in, libs/Makefile.in:
	    library building order correction, and autoconfiguration
	    straightening so that lack of dbm databases is reported
	    corrently. (The NDBM even with its faults is sort of ok,
	    but the DBM - its predecessor - is not...)

2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* include/libz.h, scheduler/scheduler.c, scheduler/update.c,
	  lib/esyslib.c, include/ta.h:
	    To track strange looking  eunlink()  problem reported by
	    Eugene my first approach is to add identity tags for eunlink()
	    calls so I can have some additional clue as to *which* of